# FileReader

./: CMakeLists.txt  README.md  fileReader.c  fileReader.h  fileWriter.c  fileWriter.h  main.c  obeme.txt
.github/workflows/: codeql-analysis.yml
